fix nav z-index

--- a/styles/style.css
+++ b/styles/style.css
@@ -87,7 +87,7 @@ nav {
 	border-radius: 15px; /* Rounded corners */
 	padding: 10px; /* Add some padding to the nav element */
 	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Add a subtle box shadow for depth */
-	z-index: 1;
+	z-index: 9999;
 }
 
 button {
